--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,14 @@
         "setono/sylius-tag-bag-plugin": "Use it if you don't want to override shop's layout.html.twig"
     },
     "require-dev": {
-        "setono/sylius-tag-bag-plugin": "^0.1.0",
-
+        "phpstan/phpstan-doctrine": "^0.10",
+        "phpstan/phpstan-shim": "^0.10",
+        "phpstan/phpstan-symfony": "^0.10",
+        "phpstan/phpstan-webmozart-assert": "^0.10",
         "roave/security-advisories": "dev-master",
         "sensiolabs/security-checker": "^5.0",
+        "setono/sylius-tag-bag-plugin": "^0.1.0",
         "sylius-labs/coding-standard": "^2.0",
-
         "symfony/browser-kit": "^3.4|^4.1",
         "symfony/debug-bundle": "^3.4|^4.1",
         "symfony/dotenv": "^4.2",
@@ -79,7 +81,7 @@
         "fix-style": "./vendor/bin/ecs check src",
         "analyse": [
             "@ensure-test-container-exists",
-            "./vendor/bin/phpstan.phar analyse -c phpstan.neon -l max src"
+            "./vendor/bin/phpstan analyse -c phpstan.neon -l max src"
         ],
         "ensure-env-copied": "([[ ${SYMFONY_ENV:-'dev'} == 'dev' ]] && composer ensure-env-dev-copied) || ([[ ${SYMFONY_ENV:-'dev'} == 'test' ]] && composer ensure-env-test-copied) || echo 'Unknown environment ${SYMFONY_ENV}'",
         "ensure-env-test-copied": "(cd tests/Application && ([[ -f .env.test.local ]] || cp .env.test .env.test.local))",
