--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,9 @@ before_script:
 
 script:
     - composer validate --strict
+    - composer check-style
     - composer analyse
+    - composer test
 
 after_failure:
     - vendor/lakion/mink-debug-extension/travis/tools/upload-textfiles "${SYLIUS_BUILD_DIR}/*.log"
