--- a/composer.json
+++ b/composer.json
@@ -1,44 +1,50 @@
 {
     "name": "setono/sylius-addwish-plugin",
     "type": "sylius-plugin",
-    "keywords": ["sylius", "sylius-plugin", "setono", "addwish"],
     "description": "Sylius plugin that integrates Addwish",
+    "keywords": [
+        "sylius",
+        "sylius-plugin",
+        "setono",
+        "addwish"
+    ],
     "license": "MIT",
     "require": {
         "php": "^7.2",
-
+        "setono/tag-bag-bundle": "^1.0",
         "sylius/sylius": "^1.3.0",
-        "symfony/event-dispatcher": "^3.4|^4.1",
-        "setono/tag-bag-bundle": "^1.0"
+        "thecodingmachine/safe": "^0.1.16"
     },
     "require-dev": {
+        "localheinz/composer-normalize": "^1.3",
         "phpspec/phpspec": "^5.0",
-        "phpstan/phpstan-doctrine": "^0.10",
-        "phpstan/phpstan-shim": "^0.10",
-        "phpstan/phpstan-symfony": "^0.10",
-        "phpstan/phpstan-webmozart-assert": "^0.10",
+        "phpstan/phpstan": "^0.11",
+        "phpstan/phpstan-doctrine": "^0.11",
+        "phpstan/phpstan-strict-rules": "^0.11",
+        "phpstan/phpstan-webmozart-assert": "^0.11",
         "roave/security-advisories": "dev-master",
         "sensiolabs/security-checker": "^5.0",
         "setono/sylius-tag-bag-plugin": "^1.0",
-        "sylius-labs/coding-standard": "^2.0",
-        "symfony/browser-kit": "^3.4|^4.1",
-        "symfony/debug-bundle": "^3.4|^4.1",
+        "sylius-labs/coding-standard": "^3.0",
+        "symfony/browser-kit": "^3.4 || ^4.1",
+        "symfony/debug-bundle": "^3.4 || ^4.1",
         "symfony/dotenv": "^4.2",
-        "symfony/intl": "^3.4|^4.1",
-        "symfony/web-profiler-bundle": "^3.4|^4.1",
-        "symfony/web-server-bundle": "^3.4|^4.1"
+        "symfony/intl": "^3.4 || ^4.1",
+        "symfony/web-profiler-bundle": "^3.4 || ^4.1",
+        "symfony/web-server-bundle": "^3.4 || ^4.1",
+        "thecodingmachine/phpstan-safe-rule": "^0.1.4"
     },
     "suggest": {
         "setono/sylius-tag-bag-plugin": "Use it if you don't want to override shop's layout.html.twig"
     },
-    "conflict": {
-        "symfony/symfony": "4.1.8",
-        "symfony/browser-kit": "4.1.8",
-        "symfony/dependency-injection": "4.1.8",
-        "symfony/dom-crawler": "4.1.8",
-        "symfony/routing": "4.1.8"
+    "config": {
+        "sort-packages": true
     },
-    "prefer-stable": true,
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.2-dev"
+        }
+    },
     "autoload": {
         "psr-4": {
             "Setono\\SyliusAddwishPlugin\\": "src/",
@@ -46,61 +52,52 @@
         }
     },
     "autoload-dev": {
-        "classmap": ["tests/Application/Kernel.php"]
+        "classmap": [
+            "tests/Application/Kernel.php"
+        ]
     },
-    "config": {
-        "sort-packages": true
-    },
+    "prefer-stable": true,
     "scripts": {
-        "try": [
-            "@ensure-vendors-installed",
-            "@assets",
-            "@fixtures",
-            "@run"
+        "all": [
+            "@checks"
         ],
+        "analyse": "vendor/bin/phpstan analyse -c phpstan.neon -l max src",
         "assets": [
             "@ensure-assets-installed",
             "@ensure-assets-compiled"
         ],
+        "check-style": "vendor/bin/ecs check src",
+        "checks": [
+            "@check-style",
+            "@analyse"
+        ],
+        "ensure-assets-compiled": "[[ -d tests/Application/public/assets ]] || (cd tests/Application && yarn build && composer ensure-env-copied && bin/console assets:install public -e ${SYMFONY_ENV:-'dev'})",
+        "ensure-assets-installed": "[[ -d tests/Application/node_modules ]] || (cd tests/Application && yarn install)",
+        "ensure-database-created": "composer ensure-env-copied && (cd tests/Application && bin/console doctrine:database:create --if-not-exists -e ${SYMFONY_ENV:-'dev'})",
+        "ensure-env-copied": "([[ ${SYMFONY_ENV:-'dev'} == 'dev' ]] && composer ensure-env-dev-copied) || ([[ ${SYMFONY_ENV:-'dev'} == 'test' ]] && composer ensure-env-test-copied) || echo 'Unknown environment ${SYMFONY_ENV}'",
+        "ensure-env-dev-copied": "(cd tests/Application && ([[ -f .env.dev.local ]] || cp .env  .env.dev.local))",
+        "ensure-env-test-copied": "(cd tests/Application && ([[ -f .env.test.local ]] || cp .env.test .env.test.local))",
+        "ensure-schema-updated": "composer ensure-env-copied && (cd tests/Application && bin/console doctrine:schema:update --force -e ${SYMFONY_ENV:-'dev'})",
+        "ensure-vendors-installed": "[[ -f vendor/autoload.php ]] || php -d memory_limit=-1 /usr/local/bin/composer install",
+        "fix-style": "vendor/bin/ecs check src --fix",
         "fixtures": [
             "@ensure-database-created",
             "@ensure-schema-updated",
             "(cd tests/Application && bin/console sylius:fixtures:load --no-interaction -e ${SYMFONY_ENV:-'dev'})"
         ],
+        "phpspec": "vendor/bin/phpspec run",
         "run": [
             "@ensure-env-copied",
             "(cd tests/Application && bin/console server:run -d public -e ${SYMFONY_ENV:-'dev'})"
         ],
-        "all": [
-            "@checks"
-        ],
-        "checks": [
-            "@check-style",
-            "@analyse"
-        ],
-        "check-style": "./vendor/bin/ecs check src",
-        "fix-style": "./vendor/bin/ecs check src --fix",
-        "analyse": [
-            "@ensure-test-container-exists",
-            "./vendor/bin/phpstan analyse -c phpstan.neon -l max src"
-        ],
         "test": [
             "@phpspec"
         ],
-        "phpspec": "./vendor/bin/phpspec run",
-        "ensure-env-copied": "([[ ${SYMFONY_ENV:-'dev'} == 'dev' ]] && composer ensure-env-dev-copied) || ([[ ${SYMFONY_ENV:-'dev'} == 'test' ]] && composer ensure-env-test-copied) || echo 'Unknown environment ${SYMFONY_ENV}'",
-        "ensure-env-test-copied": "(cd tests/Application && ([[ -f .env.test.local ]] || cp .env.test .env.test.local))",
-        "ensure-env-dev-copied":  "(cd tests/Application && ([[ -f .env.dev.local ]] || cp .env  .env.dev.local))",
-        "ensure-vendors-installed": "[[ -f vendor/autoload.php ]] || php -d memory_limit=-1 /usr/local/bin/composer install",
-        "ensure-assets-installed": "[[ -d tests/Application/node_modules ]] || (cd tests/Application && yarn install)",
-        "ensure-assets-compiled": "[[ -d tests/Application/public/assets ]] || (cd tests/Application && yarn build && composer ensure-env-copied && bin/console assets:install public -e ${SYMFONY_ENV:-'dev'})",
-        "ensure-database-created": "composer ensure-env-copied && (cd tests/Application && bin/console doctrine:database:create --if-not-exists -e ${SYMFONY_ENV:-'dev'})",
-        "ensure-schema-updated": "composer ensure-env-copied && (cd tests/Application && bin/console doctrine:schema:update --force -e ${SYMFONY_ENV:-'dev'})",
-        "ensure-test-container-exists": "[[ -f tests/Application/var/cache/test/ApplicationTests_Setono_SyliusAddwishPlugin_Application_KernelTestDebugContainer.xml ]] || (cd tests/Application && php -d memory_limit=-1 bin/console cache:clear --env=test)"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.2-dev"
-        }
+        "try": [
+            "@ensure-vendors-installed",
+            "@assets",
+            "@fixtures",
+            "@run"
+        ]
     }
 }
