--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     "require": {
         "php": "^7.2",
         "setono/tag-bag-bundle": "^1.0",
-        "sylius/sylius": "^1.3.0",
-        "thecodingmachine/safe": "^0.1.16"
+        "sylius/sylius": "^1.3",
+        "thecodingmachine/safe": "^1.0"
     },
     "require-dev": {
-        "localheinz/composer-normalize": "^1.3",
-        "phpspec/phpspec": "^5.0",
+        "ergebnis/composer-normalize": "^2.0",
+        "phpspec/phpspec": "^5.1 || ^6.0",
         "phpstan/phpstan": "^0.11",
         "phpstan/phpstan-doctrine": "^0.11",
         "phpstan/phpstan-strict-rules": "^0.11",
@@ -32,7 +32,7 @@
         "symfony/intl": "^3.4 || ^4.1",
         "symfony/web-profiler-bundle": "^3.4 || ^4.1",
         "symfony/web-server-bundle": "^3.4 || ^4.1",
-        "thecodingmachine/phpstan-safe-rule": "^0.1.4"
+        "thecodingmachine/phpstan-safe-rule": "^1.0@beta"
     },
     "suggest": {
         "setono/sylius-tag-bag-plugin": "Use it if you don't want to override shop's layout.html.twig"
