--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": ">=7.3",
         "setono/tag-bag-bundle": "^2.1",
         "setono/tag-bag-twig": "^1.1",
         "sylius/sylius": "^1.3",
