--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,20 @@
 {
     "name": "setono/sylius-addwish-plugin",
-    "type": "sylius-plugin",
     "description": "Sylius plugin that integrates Addwish",
+    "license": "MIT",
+    "type": "sylius-plugin",
     "keywords": [
         "sylius",
         "sylius-plugin",
         "setono",
         "addwish"
     ],
-    "license": "MIT",
     "require": {
-        "php": ">=7.3",
+        "php": ">=7.4",
         "setono/tag-bag-bundle": "^2.1",
         "setono/tag-bag-twig": "^1.1",
         "sylius/sylius": "^1.3",
+        "symfony/config": "^4.4 || ^5.0",
         "symfony/http-kernel": "^4.4 || ^5.0",
         "thecodingmachine/safe": "^1.0"
     },
@@ -24,7 +25,7 @@
         "phpstan/phpstan-doctrine": "^0.11",
         "phpstan/phpstan-strict-rules": "^0.11",
         "phpstan/phpstan-webmozart-assert": "^0.11",
-        "roave/security-advisories": "dev-master",
+        "roave/security-advisories": "dev-latest",
         "sensiolabs/security-checker": "^5.0",
         "setono/sylius-tag-bag-plugin": "^1.1",
         "sylius-labs/coding-standard": "^3.0",
@@ -34,19 +35,12 @@
         "symfony/intl": "^3.4 || ^4.1",
         "symfony/web-profiler-bundle": "^3.4 || ^4.1",
         "symfony/web-server-bundle": "^3.4 || ^4.1",
-        "thecodingmachine/phpstan-safe-rule": "^1.0@beta"
+        "thecodingmachine/phpstan-safe-rule": "^1.0"
     },
     "suggest": {
         "setono/sylius-tag-bag-plugin": "Use it if you don't want to override shop's layout.html.twig"
     },
-    "config": {
-        "sort-packages": true
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.3-dev"
-        }
-    },
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Setono\\SyliusAddwishPlugin\\": "src/",
@@ -58,7 +52,18 @@
             "tests/Application/Kernel.php"
         ]
     },
-    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "ergebnis/composer-normalize": true,
+            "symfony/thanks": true
+        },
+        "sort-packages": true
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.3-dev"
+        }
+    },
     "scripts": {
         "all": [
             "@checks"
