--- a/composer.json
+++ b/composer.json
@@ -13,29 +13,21 @@
         "php": ">=7.4",
         "setono/tag-bag-bundle": "^2.1",
         "setono/tag-bag-twig": "^1.1",
-        "sylius/sylius": "^1.3",
-        "symfony/config": "^4.4 || ^5.0",
-        "symfony/http-kernel": "^4.4 || ^5.0",
-        "thecodingmachine/safe": "^1.0"
+        "symfony/config": "^4.4 || ^5.4",
+        "symfony/http-kernel": "^4.4 || ^5.4"
     },
     "require-dev": {
-        "ergebnis/composer-normalize": "^2.0",
-        "phpspec/phpspec": "^5.1 || ^6.0",
-        "phpstan/phpstan": "^0.11",
-        "phpstan/phpstan-doctrine": "^0.11",
-        "phpstan/phpstan-strict-rules": "^0.11",
-        "phpstan/phpstan-webmozart-assert": "^0.11",
+        "phpspec/phpspec": "^6.3",
         "roave/security-advisories": "dev-latest",
-        "sensiolabs/security-checker": "^5.0",
+        "setono/code-quality-pack": "^2.1.3",
         "setono/sylius-tag-bag-plugin": "^1.1",
-        "sylius-labs/coding-standard": "^3.0",
-        "symfony/browser-kit": "^3.4 || ^4.1",
-        "symfony/debug-bundle": "^3.4 || ^4.1",
-        "symfony/dotenv": "^4.2",
-        "symfony/intl": "^3.4 || ^4.1",
-        "symfony/web-profiler-bundle": "^3.4 || ^4.1",
-        "symfony/web-server-bundle": "^3.4 || ^4.1",
-        "thecodingmachine/phpstan-safe-rule": "^1.0"
+        "sylius/sylius": "^1.3",
+        "symfony/browser-kit": "^4.4 || ^5.4",
+        "symfony/debug-bundle": "^4.4 || ^5.4",
+        "symfony/dotenv": "^4.4 || ^5.4",
+        "symfony/intl": "^4.4 || ^5.4",
+        "symfony/web-profiler-bundle": "^4.4 || ^5.4",
+        "symfony/web-server-bundle": "^4.4 || ^5.4"
     },
     "suggest": {
         "setono/sylius-tag-bag-plugin": "Use it if you don't want to override shop's layout.html.twig"
@@ -43,19 +35,22 @@
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "Setono\\SyliusAddwishPlugin\\": "src/",
-            "Tests\\Setono\\SyliusAddwishPlugin\\": "tests/"
+            "Setono\\SyliusAddwishPlugin\\": "src/"
         }
     },
     "autoload-dev": {
         "classmap": [
             "tests/Application/Kernel.php"
-        ]
+        ],
+        "psr-4": {
+            "Tests\\Setono\\SyliusAddwishPlugin\\": "tests/"
+        }
     },
     "config": {
         "allow-plugins": {
             "ergebnis/composer-normalize": true,
-            "symfony/thanks": true
+            "symfony/thanks": true,
+            "dealerdirect/phpcodesniffer-composer-installer": false
         },
         "sort-packages": true
     },
@@ -68,12 +63,12 @@
         "all": [
             "@checks"
         ],
-        "analyse": "vendor/bin/phpstan analyse -c phpstan.neon -l max src",
+        "analyse": "psalm",
         "assets": [
             "@ensure-assets-installed",
             "@ensure-assets-compiled"
         ],
-        "check-style": "vendor/bin/ecs check src",
+        "check-style": "ecs check",
         "checks": [
             "@check-style",
             "@analyse"
@@ -86,13 +81,13 @@
         "ensure-env-test-copied": "(cd tests/Application && ([[ -f .env.test.local ]] || cp .env.test .env.test.local))",
         "ensure-schema-updated": "composer ensure-env-copied && (cd tests/Application && bin/console doctrine:schema:update --force -e ${SYMFONY_ENV:-'dev'})",
         "ensure-vendors-installed": "[[ -f vendor/autoload.php ]] || php -d memory_limit=-1 /usr/local/bin/composer install",
-        "fix-style": "vendor/bin/ecs check src --fix",
+        "fix-style": "ecs check --fix",
         "fixtures": [
             "@ensure-database-created",
             "@ensure-schema-updated",
             "(cd tests/Application && bin/console sylius:fixtures:load --no-interaction -e ${SYMFONY_ENV:-'dev'})"
         ],
-        "phpspec": "vendor/bin/phpspec run",
+        "phpspec": "phpspec run",
         "run": [
             "@ensure-env-copied",
             "(cd tests/Application && bin/console server:run -d public -e ${SYMFONY_ENV:-'dev'})"
